# C

./: CMakeLists.txt  README.md  dots.cpp  helloworld.cpp  spigot_pi.cpp
OOP/LaboratoryWorks/: LW1  LW1.cpp  LW4  LW4.cpp  LW5.cpp
algorithms_and_data_structures/: README.md
algorithms_and_data_structures/include/: _libList.h  libList.h  merge_sort.h
algorithms_and_data_structures/src/: List  friend_function.cpp  main.cpp  merge_sort.c
server/: README.md  server.cpp  server_core.cpp
technopark/: PROJECT_IDEAS.txt
technopark/1_module/: A.c  B.c
templates/: README.md  simple_template.c  simple_template.cpp  template.cpp
ООП/: README.md
ООП/ЛР/: ЛР3.cpp
ООП/Практикум/: README.md
